# Sentiment-Translate

./: .gitignore
backend/: Cargo.toml  build.sh  test.sh
backend/src/: main.rs
web/: README.md  index.html  index.js  package.json  styles.css
